--- a/generic.html
+++ b/generic.html
@@ -62,7 +62,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form class="kwes-form" method="post" action="https://kwes.io/api/foreign/forms/YKvAKmiYsckKqTvZ3lyV">
+								<form class="" method="POST" action="https://formspree.io/f/mrgrbynw">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -78,7 +78,7 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><button type="submit" value="Send Message" class="primary"></button></li>
+										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Clear" /></li>
 									</ul>
 								</form>
@@ -139,5 +139,4 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
-	<script src="https://kwes.io/v2/kwes-script.js" defer></script>
 </html>
