--- a/generic.html
+++ b/generic.html
@@ -58,7 +58,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form class="" method="POST" action="https://formspree.io/f/mrgrbynw">
+								<form class="kwes-form" method="POST" action="https://kwes.io/api/foreign/forms/YKvAKmiYsckKqTvZ3lyV">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -135,4 +135,5 @@
 			<script src="assets/js/main.js"></script>
 
 	</body>
+	<script src="https://kwes.io/v2/kwes-script.js" defer></script>
 </html>
