--- a/landing.html
+++ b/landing.html
@@ -141,7 +141,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="POST" action="https://formspree.io/f/mrgrbynw">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
