--- a/experience.html
+++ b/experience.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Elements - Forty by HTML5 UP</title>
@@ -464,7 +460,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="POST" action="https://formspree.io/f/mrgrbynw">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
