--- a/elements.html
+++ b/elements.html
@@ -1,12 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Forty by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
-		<title>Elements - Forty by HTML5 UP</title>
+		<title>Contact Us</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -465,7 +461,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<form method="post" action="#">
+								<form method="POST" action="https://formspree.io/f/mrgrbynw">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
