--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+<!-- 							<section id="two">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -124,7 +124,7 @@
 										<li><a href="landing.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section>
+							</section> -->
 
 					</div>
 
@@ -162,7 +162,7 @@
 									</div>
 								</section> -->
 								<section>
-									<!-- <div class="contact-method">
+									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3></h3>
 										<span>(000) 000-0000 x12387</span>
@@ -176,7 +176,7 @@
 										Nashville, TN 00000<br />
 										United States of America</span>
 									</div>
-								</section> -->
+								</section>
 							</section>
 						</div>
 					</section>
