--- a/index.html
+++ b/index.html
@@ -154,13 +154,13 @@
 								</form>
 							</section>
 							<section class="split">
-								<!-- <section>
+								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
 										<a href="#">gabycamposcontact@gmail.com</a>
 									</div>
-								</section> -->
+								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
