--- a/index.html
+++ b/index.html
@@ -165,15 +165,14 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3></h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>Please request through email.</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
+										Los Banos, CA 93635<br />
 										United States of America</span>
 									</div>
 								</section>
