--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 								<li><a href="https://www.linkedin.com/in/gabriela-campos-ba736b130/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Gabriela Campos</li>
 							</ul>
 						</div>
 					</footer>
