--- a/generic.html
+++ b/generic.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>About Me- Gabriela Campos</title>
+		<title>About Me-Gabriela Campos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -80,29 +80,28 @@
 								</form>
 							</section>
 							<section class="split">
-								<!-- <section> -->
-									<!-- <div class="contact-method">
+								<section>
+									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
-									</div> -->
-								<!-- </section> -->
-								<!-- <section> -->
-									<!-- <div class="contact-method">
+										<a href="gabycamposcontact@gmail.com">gabycamposcontact@gmail.com</a>
+									</div>
+								</section>
+								<section>
+									 <div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div> -->
-								<!-- </section> -->
-								<!-- <section>
+										<span>Please request through email.</span>
+									</div> 
+								 </section>
+								 <section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
+										Los Banos, CA 93635<br />
 										United States of America</span>
 									</div>
-								</section> -->
+								</section>
 							</section>
 						</div>
 					</section>
@@ -116,7 +115,7 @@
 								<li><a href="https://www.linkedin.com/in/gabriela-campos-ba736b130/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Gabriela Campos</li>
 							</ul>
 						</div>
 					</footer>
