--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
-										<h3></h3>
+										<h3>Phone</h3>
 										<span>Please request through email.</span>
 									</div>
 								</section>
