--- a/elements.html
+++ b/elements.html
@@ -43,7 +43,7 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Elements</h1>
+										<h1>Contact Me</h1>
 									</header>
 
 									<!-- Content -->
@@ -487,22 +487,21 @@ print 'It took ' + i + ' iterations to sort the deck.';
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="gabycamposcontact@gmail.com">gabycamposcontact@gmail.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>Please request through email.</span>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
+										Los Banos, CA 93635<br />
 										United States of America</span>
 									</div>
 								</section>
@@ -519,7 +518,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 								<li><a href="https://www.linkedin.com/in/gabriela-campos-ba736b130/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Gabriela Campos</li>
 							</ul>
 						</div>
 					</footer>
