--- a/elements.html
+++ b/elements.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Contact Us</title>
+		<title>Contact Me-Gabriela Campos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -37,17 +37,17 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main" class="alt">
+<!-- 					<div id="main" class="alt">
 
 						<!-- One -->
-							<section id="one">
+<!-- 							<section id="one">
 								<div class="inner">
 									<header class="major">
 										<h1>Contact Me</h1>
-									</header>
+									</header> -->
 
 									<!-- Content -->
-										<h2 id="content">Sample Content</h2>
+<!-- 										<h2 id="content">Sample Content</h2>
 										<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing.</p>
 										<div class="row">
 											<div class="col-6 col-12-small">
@@ -57,9 +57,9 @@
 											<div class="col-6 col-12-small">
 												<h3>Magna odio tempus commodo</h3>
 												<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
-											</div>
+											</div> -->
 											<!-- Break -->
-											<div class="col-4 col-12-medium">
+<!-- 											<div class="col-4 col-12-medium">
 												<h3>Interdum sapien gravida</h3>
 												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 											</div>
@@ -73,15 +73,15 @@
 											</div>
 										</div>
 
-									<hr class="major" />
+									<hr class="major" /> -->
 
 									<!-- Elements -->
-										<h2 id="elements">Elements</h2>
+<!-- 										<h2 id="elements">Elements</h2>
 										<div class="row gtr-200">
-											<div class="col-6 col-12-medium">
+											<div class="col-6 col-12-medium"> -->
 
 												<!-- Text stuff -->
-													<h3>Text</h3>
+<!-- 													<h3>Text</h3>
 													<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
 													This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
 													This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>.
@@ -91,10 +91,10 @@
 													<h3>Heading Level 3</h3>
 													<h4>Heading Level 4</h4>
 													<hr />
-													<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
+													<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p> -->
 
 												<!-- Lists -->
-													<h3>Lists</h3>
+<!-- 													<h3>Lists</h3>
 													<div class="row">
 														<div class="col-6 col-12-small">
 
@@ -205,14 +205,14 @@
 														<li><a href="#" class="page">9</a></li>
 														<li><a href="#" class="page">10</a></li>
 														<li><a href="#" class="button small">Next</a></li>
-													</ul>
+													</ul> -->
 
 												<!-- Blockquote -->
-													<h3>Blockquote</h3>
+<!-- 													<h3>Blockquote</h3>
 													<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis.</blockquote>
-
+ -->
 												<!-- Table -->
-													<h3>Table</h3>
+<!-- 													<h3>Table</h3>
 
 													<h4>Default</h4>
 													<div class="table-wrapper">
@@ -307,10 +307,10 @@
 													</div>
 
 											</div>
-											<div class="col-6 col-12-medium">
+											<div class="col-6 col-12-medium"> -->
 
 												<!-- Buttons -->
-													<h3>Buttons</h3>
+<!-- 													<h3>Buttons</h3>
 													<ul class="actions">
 														<li><a href="#" class="button primary">Primary</a></li>
 														<li><a href="#" class="button">Default</a></li>
@@ -346,10 +346,10 @@
 													<ul class="actions">
 														<li><span class="button primary disabled">Primary</span></li>
 														<li><span class="button disabled">Default</span></li>
-													</ul>
+													</ul> -->
 
 												<!-- Form -->
-													<h3>Form</h3>
+<!-- 													<h3>Form</h3>
 
 													<form method="post" action="#">
 														<div class="row gtr-uniform">
@@ -358,9 +358,9 @@
 															</div>
 															<div class="col-6 col-12-xsmall">
 																<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
-															</div>
+															</div> -->
 															<!-- Break -->
-															<div class="col-12">
+<!-- 															<div class="col-12">
 																<select name="demo-category" id="demo-category">
 																	<option value="">- Category -</option>
 																	<option value="1">Manufacturing</option>
@@ -368,9 +368,9 @@
 																	<option value="1">Administration</option>
 																	<option value="1">Human Resources</option>
 																</select>
-															</div>
+															</div> -->
 															<!-- Break -->
-															<div class="col-4 col-12-small">
+<!-- 															<div class="col-4 col-12-small">
 																<input type="radio" id="demo-priority-low" name="demo-priority" checked>
 																<label for="demo-priority-low">Low</label>
 															</div>
@@ -381,32 +381,32 @@
 															<div class="col-4 col-12-small">
 																<input type="radio" id="demo-priority-high" name="demo-priority">
 																<label for="demo-priority-high">High</label>
-															</div>
+															</div> -->
 															<!-- Break -->
-															<div class="col-6 col-12-small">
+<!-- 															<div class="col-6 col-12-small">
 																<input type="checkbox" id="demo-copy" name="demo-copy">
 																<label for="demo-copy">Email me a copy</label>
 															</div>
 															<div class="col-6 col-12-small">
 																<input type="checkbox" id="demo-human" name="demo-human" checked>
 																<label for="demo-human">I am a human</label>
-															</div>
+															</div> -->
 															<!-- Break -->
-															<div class="col-12">
+<!-- 															<div class="col-12">
 																<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-															</div>
+															</div> -->
 															<!-- Break -->
-															<div class="col-12">
+<!-- 															<div class="col-12">
 																<ul class="actions">
 																	<li><input type="submit" value="Send Message" class="primary" /></li>
 																	<li><input type="reset" value="Reset" /></li>
 																</ul>
 															</div>
 														</div>
-													</form>
+													</form> -->
 
 												<!-- Image -->
-													<h3>Image</h3>
+<!-- 													<h3>Image</h3>
 
 													<h4>Fit</h4>
 													<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
@@ -416,11 +416,11 @@
 															<div class="col-4"><span class="image fit"><img src="images/pic09.jpg" alt="" /></span></div>
 															<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
 															<!-- Break -->
-															<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
+<!-- 															<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
 															<div class="col-4"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
 															<div class="col-4"><span class="image fit"><img src="images/pic09.jpg" alt="" /></span></div>
 															<!-- Break -->
-															<div class="col-4"><span class="image fit"><img src="images/pic09.jpg" alt="" /></span></div>
+<!-- 															<div class="col-4"><span class="image fit"><img src="images/pic09.jpg" alt="" /></span></div>
 															<div class="col-4"><span class="image fit"><img src="images/pic10.jpg" alt="" /></span></div>
 															<div class="col-4"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
 														</div>
@@ -428,16 +428,16 @@
 
 													<h4>Left &amp; Right</h4>
 													<p><span class="image left"><img src="images/pic09.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget tempus vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis.</p>
-													<p><span class="image right"><img src="images/pic10.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget tempus vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis.</p>
+													<p><span class="image right"><img src="images/pic10.jpg" alt="" /></span>Lorem ipsum dolor sit accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget tempus vestibulum ante ipsum primis in faucibus magna blandit adipiscing eu felis iaculis.</p> -->
 
 												<!-- Box -->
-													<h3>Box</h3>
+<!-- 													<h3>Box</h3>
 													<div class="box">
 														<p>Felis sagittis eget tempus primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Magna sed etiam ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus lorem ipsum.</p>
-													</div>
+													</div> -->
 
 												<!-- Preformatted Code -->
-													<h3>Preformatted</h3>
+<!-- 													<h3>Preformatted</h3>
 													<pre><code>i = 0;
 
 while (!deck.isInOrder()) {
@@ -448,15 +448,15 @@ while (!deck.isInOrder()) {
 
 print 'It took ' + i + ' iterations to sort the deck.';
 </code></pre>
-
-											</div>
+ -->
+<!-- 											</div>
 										</div>
 
 								</div>
 							</section>
 
-					</div>
-
+					</div> -->
+ -->
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
