--- a/elements.html
+++ b/elements.html
@@ -36,15 +36,15 @@
 						</ul>
 					</nav>
 
-				<!-- Main -->
-<!-- 					<div id="main" class="alt">
+				<!-- Main
+ 					<div id="main" class="alt">
 
 						<!-- One -->
-<!-- 							<section id="one">
+							<section id="one">
 								<div class="inner">
 									<header class="major">
 										<h1>Contact Me</h1>
-									</header> -->
+									</header>
 
 									<!-- Content -->
 <!-- 										<h2 id="content">Sample Content</h2>
@@ -456,7 +456,7 @@ print 'It took ' + i + ' iterations to sort the deck.';
 							</section>
 
 					</div> -->
- -->
+ 
 				<!-- Contact -->
 					<section id="contact">
 						<div class="inner">
