--- a/landing.html
+++ b/landing.html
@@ -75,9 +75,9 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h3>Horoscope Time!</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Take a night sky adventure to find your astrological sign you. Read description words about you!</p>
 											<ul class="actions">
 												<li><a href="https://horoscopetime.netlify.app" class="button">Learn more</a></li>
 											</ul>
