--- a/landing.html
+++ b/landing.html
@@ -77,7 +77,7 @@
 											<header class="major">
 												<h3>Horoscope Time!</h3>
 											</header>
-											<p>Take a night sky adventure to find your astrological sign you. Read description words about you!</p>
+											<p>Take a night sky adventure to find your astrological sign. Add your birth month and birth day to read description words about you!</p>
 											<ul class="actions">
 												<li><a href="https://horoscopetime.netlify.app" class="button">Learn more</a></li>
 											</ul>
