--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 							<ul class="icons">
 								<li><a href="https://twitter.com/gc_codes" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://github.com/GabyC0" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="https://www.linkedin.com/in/gabriela-campos-ba736b130/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://www.linkedin.com/in/gabriela-campos1" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Gabriela Campos</li>
