--- a/landing.html
+++ b/landing.html
@@ -100,7 +100,7 @@
 										</div>
 									</div>
 								</section>
-								<section>
+<!-- 								<section>
 									<a href="generic.html" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
@@ -116,7 +116,7 @@
 										</div>
 									</div>
 								</section>
-							</section>
+							</section> -->
 
 						<!-- Three -->
 							<section id="three">
