--- a/landing.html
+++ b/landing.html
@@ -57,14 +57,14 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+<!-- 							<section id="one">
 								<div class="inner">
 									<header class="major">
 										<h2>Sed amet aliquam</h2>
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
 								</div>
-							</section>
+							</section> -->
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
@@ -100,7 +100,7 @@
 										</div>
 									</div>
 								</section>
-<!-- 								<section>
+								<section>
 									<a href="generic.html" class="image">
 										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
 									</a>
@@ -115,7 +115,7 @@
 											</ul>
 										</div>
 									</div>
-								</section> -->
+								</section>
 							</section>
 
 						<!-- Three -->
