--- a/landing.html
+++ b/landing.html
@@ -69,7 +69,7 @@
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://horoscopetime.netlify.app" class="image">
 										<img src="images/pic08.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
@@ -85,7 +85,7 @@
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
+									<a href="https://clocktime1.netlify.app/" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content">
