--- a/landing.html
+++ b/landing.html
@@ -86,14 +86,14 @@
 								</section>
 								<section>
 									<a href="https://clocktime1.netlify.app/" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="images/clock.png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
 												<h3>Clock</h3>
 											</header>
-											<p>Tell time...description.</p>
+											<p>Slow down, speed up, let's tell time together with this jellyfish clock.</p>
 											<ul class="actions">
 												<li><a href="https://clocktime1.netlify.app/" class="button">Learn more</a></li>
 											</ul>
