--- a/landing.html
+++ b/landing.html
@@ -79,7 +79,7 @@
 											</header>
 											<p>Take a night sky adventure to find your astrological sign. Add your birth month and birth day to read description words about you!</p>
 											<ul class="actions">
-												<li><a href="https://horoscopetime.netlify.app" class="button">Learn more</a></li>
+												<li><a href="https://horoscopetime.netlify.app" class="button">VIEW</a></li>
 											</ul>
 										</div>
 									</div>
@@ -95,23 +95,23 @@
 											</header>
 											<p>Slow down, speed up, let's tell time together with this jellyfish clock.</p>
 											<ul class="actions">
-												<li><a href="https://clocktime1.netlify.app/" class="button">Learn more</a></li>
+												<li><a href="https://clocktime1.netlify.app/" class="button">VIEW</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
 								<section>
-									<a href="generic.html" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+									<a href="https://convert-to-celcius.netlify.app/" class="image">
+										<img src="images/temp.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Sed nunc ligula</h3>
+												<h3>Temperature Converter</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>Is it too hot? Too cold? Or just right? Come convert your fahrenheit to celsius and find out.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="https://convert-to-celcius.netlify.app/" class="button">VIEW</a></li>
 											</ul>
 										</div>
 									</div>
