--- a/experience.html
+++ b/experience.html
@@ -49,7 +49,7 @@
 									<!-- Content -->
 										<h2 id="content">Sample Content</h2>
 										<p>Praesent ac adipiscing ullamcorper semper ut amet ac risus. Lorem sapien ut odio odio nunc. Ac adipiscing nibh porttitor erat risus justo adipiscing adipiscing amet placerat accumsan. Vis. Faucibus odio magna tempus adipiscing a non. In mi primis arcu ut non accumsan vivamus ac blandit adipiscing adipiscing arcu metus praesent turpis eu ac lacinia nunc ac commodo gravida adipiscing eget accumsan ac nunc adipiscing adipiscing.</p>
-										<div class="row">
+<!-- 										<div class="row">
 											<div class="col-6 col-12-small">
 												<h3>Sem turpis amet semper</h3>
 												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat commodo eu sed ante lacinia. Sapien a lorem in integer ornare praesent commodo adipiscing arcu in massa commodo lorem accumsan at odio massa ac ac. Semper adipiscing varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
@@ -59,7 +59,7 @@
 												<p>In arcu accumsan arcu adipiscing accumsan orci ac. Felis id enim aliquet. Accumsan ac integer lobortis commodo ornare aliquet accumsan erat tempus amet porttitor. Ante commodo blandit adipiscing integer semper orci eget. Faucibus commodo adipiscing mi eu nullam accumsan morbi arcu ornare odio mi adipiscing nascetur lacus ac interdum morbi accumsan vis mi accumsan ac praesent.</p>
 											</div>
 											<!-- Break -->
-											<div class="col-4 col-12-medium">
+<!-- 											<div class="col-4 col-12-medium">
 												<h3>Interdum sapien gravida</h3>
 												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 											</div>
@@ -71,17 +71,17 @@
 												<h3>Accumsan montes viverra</h3>
 												<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
 											</div>
-										</div>
+										</div> -->
 
-									<hr class="major" />
+<!-- 									<hr class="major" /> -->
 
 									<!-- Elements -->
-										<h2 id="elements">Elements</h2>
+<!-- 										<h2 id="elements">Elements</h2>
 										<div class="row gtr-200">
-											<div class="col-6 col-12-medium">
+											<div class="col-6 col-12-medium"> -->
 
 												<!-- Text stuff -->
-													<h3>Text</h3>
+<!-- 													<h3>Text</h3>
 													<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
 													This is <sup>superscript</sup> text and this is <sub>subscript</sub> text.
 													This is <u>underlined</u> and this is code: <code>for (;;) { ... }</code>.
@@ -92,9 +92,9 @@
 													<h4>Heading Level 4</h4>
 													<hr />
 													<p>Nunc lacinia ante nunc ac lobortis. Interdum adipiscing gravida odio porttitor sem non mi integer non faucibus ornare mi ut ante amet placerat aliquet. Volutpat eu sed ante lacinia sapien lorem accumsan varius montes viverra nibh in adipiscing blandit tempus accumsan.</p>
-
+ -->
 												<!-- Lists -->
-													<h3>Lists</h3>
+<!-- 													<h3>Lists</h3>
 													<div class="row">
 														<div class="col-6 col-12-small">
 
@@ -157,8 +157,8 @@
 															<p>Lorem ipsum dolor vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Lorem ipsum dolor.</p>
 														</dd>
 													</dl>
-
-													<h4>Actions</h4>
+ -->
+<!-- 													<h4>Actions</h4>
 													<ul class="actions">
 														<li><a href="#" class="button primary">Default</a></li>
 														<li><a href="#" class="button">Default</a></li>
@@ -193,7 +193,7 @@
 															</ul>
 														</div>
 													</div>
-
+ -->
 													<h4>Pagination</h4>
 													<ul class="pagination">
 														<li><span class="button small disabled">Prev</span></li>
