--- a/experience.html
+++ b/experience.html
@@ -194,7 +194,7 @@
 														</div>
 													</div>
  -->
-													<h4>Pagination</h4>
+<!-- 													<h4>Pagination</h4>
 													<ul class="pagination">
 														<li><span class="button small disabled">Prev</span></li>
 														<li><a href="#" class="page active">1</a></li>
@@ -206,13 +206,13 @@
 														<li><a href="#" class="page">10</a></li>
 														<li><a href="#" class="button small">Next</a></li>
 													</ul>
-
+ -->
 												<!-- Blockquote -->
-													<h3>Blockquote</h3>
-													<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis.</blockquote>
+<!-- 													<h3>Blockquote</h3>
+													<blockquote>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan faucibus. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis.</blockquote> -->
 
 												<!-- Table -->
-													<h3>Table</h3>
+<!-- 													<h3>Table</h3>
 
 													<h4>Default</h4>
 													<div class="table-wrapper">
@@ -307,10 +307,10 @@
 													</div>
 
 											</div>
-											<div class="col-6 col-12-medium">
+											<div class="col-6 col-12-medium"> -->
 
 												<!-- Buttons -->
-													<h3>Buttons</h3>
+<!-- 													<h3>Buttons</h3>
 													<ul class="actions">
 														<li><a href="#" class="button primary">Primary</a></li>
 														<li><a href="#" class="button">Default</a></li>
@@ -346,10 +346,10 @@
 													<ul class="actions">
 														<li><span class="button primary disabled">Primary</span></li>
 														<li><span class="button disabled">Default</span></li>
-													</ul>
+													</ul> -->
 
 												<!-- Form -->
-													<h3>Form</h3>
+<!-- 													<h3>Form</h3>
 
 													<form method="post" action="#">
 														<div class="row gtr-uniform">
@@ -358,9 +358,9 @@
 															</div>
 															<div class="col-6 col-12-xsmall">
 																<input type="email" name="demo-email" id="demo-email" value="" placeholder="Email" />
-															</div>
+															</div> -->
 															<!-- Break -->
-															<div class="col-12">
+<!-- 															<div class="col-12">
 																<select name="demo-category" id="demo-category">
 																	<option value="">- Category -</option>
 																	<option value="1">Manufacturing</option>
@@ -368,7 +368,7 @@
 																	<option value="1">Administration</option>
 																	<option value="1">Human Resources</option>
 																</select>
-															</div>
+															</div> -->
 															<!-- Break -->
 															<div class="col-4 col-12-small">
 																<input type="radio" id="demo-priority-low" name="demo-priority" checked>
