--- a/experience.html
+++ b/experience.html
@@ -370,46 +370,46 @@
 																</select>
 															</div> -->
 															<!-- Break -->
-															<div class="col-4 col-12-small">
+<!-- 															<div class="col-4 col-12-small">
 																<input type="radio" id="demo-priority-low" name="demo-priority" checked>
 																<label for="demo-priority-low">Low</label>
-															</div>
-															<div class="col-4 col-12-small">
+															</div> -->
+<!-- 															<div class="col-4 col-12-small">
 																<input type="radio" id="demo-priority-normal" name="demo-priority">
 																<label for="demo-priority-normal">Normal</label>
 															</div>
 															<div class="col-4 col-12-small">
 																<input type="radio" id="demo-priority-high" name="demo-priority">
 																<label for="demo-priority-high">High</label>
-															</div>
+															</div> -->
 															<!-- Break -->
-															<div class="col-6 col-12-small">
+<!-- 															<div class="col-6 col-12-small">
 																<input type="checkbox" id="demo-copy" name="demo-copy">
 																<label for="demo-copy">Email me a copy</label>
-															</div>
-															<div class="col-6 col-12-small">
+															</div> -->
+<!-- 															<div class="col-6 col-12-small">
 																<input type="checkbox" id="demo-human" name="demo-human" checked>
 																<label for="demo-human">I am a human</label>
-															</div>
+															</div> -->
 															<!-- Break -->
-															<div class="col-12">
+<!-- 															<div class="col-12">
 																<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
-															</div>
+															</div> -->
 															<!-- Break -->
-															<div class="col-12">
+<!-- 															<div class="col-12">
 																<ul class="actions">
 																	<li><input type="submit" value="Send Message" class="primary" /></li>
 																	<li><input type="reset" value="Reset" /></li>
 																</ul>
 															</div>
 														</div>
-													</form>
+													</form> -->
 
 												<!-- Image -->
-													<h3>Image</h3>
+<!-- 													<h3>Image</h3>
 
-													<h4>Fit</h4>
-													<span class="image fit"><img src="images/pic03.jpg" alt="" /></span>
+													<h4>Fit</h4> -->
+<!-- 													<span class="image fit"><img src="images/pic03.jpg" alt="" /></span> -->
 													<div class="box alt">
 														<div class="row gtr-50 gtr-uniform">
 															<div class="col-4"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div>
