--- a/landing.html
+++ b/landing.html
@@ -91,7 +91,7 @@
 									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Clock</h3>
+												<h3>Tell Tale Clock</h3>
 											</header>
 											<p>Slow down, speed up, let's tell time together with this jellyfish clock.</p>
 											<ul class="actions">
