--- a/landing.html
+++ b/landing.html
@@ -86,7 +86,7 @@
 								</section>
 								<section>
 									<a href="https://clocktime1.netlify.app/" class="image">
-										<img src="images/clock.png" alt="" data-position="top center" />
+										<img src="images/clock (1).png" alt="" data-position="top center" />
 									</a>
 									<div class="content">
 										<div class="inner">
