--- a/landing.html
+++ b/landing.html
@@ -102,7 +102,7 @@
 								</section>
 								<section>
 									<a href="https://convert-to-celcius.netlify.app/" class="image">
-										<img src="images/temp.png" alt="" data-position="25% 25%" />
+										<img src="images/temp (1).png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content">
 										<div class="inner">
