--- a/landing.html
+++ b/landing.html
@@ -70,7 +70,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="https://horoscopetime.netlify.app" class="image">
-										<img src="images/Horoscope Time.png" alt="" data-position="center center" />
+										<img src="images/Horoscope Time (1).png" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
