--- a/generic.html
+++ b/generic.html
@@ -47,7 +47,7 @@
 									</header>
 									<span class="image main"><img src="gcPic copy.png" alt="" /></span>
 									<p>My name is Gabriela, but you can call me Gaby. I am a Software Engineer based in Dos Palos, CA. I have previously worked in higher education and college access which has taught me how to work with people of diverse backgrounds with a variety of goals. Achieving these goals by being creative and finding solutions is where my strengths lie. This creativity has allowed for me to be successful within Software Engineering, where I have been able to approach challenges with a unique perspective: keeping the user in mind at all times. I am looking to bring that experience when working with you in order to help you stand out to your users. Feel free to check out my awesome work!</p>
-									<p>On a more personal note, in my free time I love learning new things, travelling, and spending time with my family. I hope to meet you soon!</p>
+									<p>On a more personal note, in my free time I love learning new things, traveling, and spending time with my family. I hope to meet you soon!</p>
 									<!-- <p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p> -->
 								</div>
 							</section>
