--- a/generic.html
+++ b/generic.html
@@ -98,7 +98,7 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										Los Banos, CA 93635<br />
+										Dos Palos, CA 93620<br />
 										United States of America</span>
 									</div>
 								</section>
